--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.16)
 
-project(calculator VERSION 0.1 LANGUAGES CXX)
+project(UnmannedTestingSystem VERSION 0.1 LANGUAGES CXX)
 
 set(CMAKE_AUTOUIC ON)
 set(CMAKE_AUTOMOC ON)
@@ -14,43 +14,45 @@ find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets)
 
 set(PROJECT_SOURCES
         main.cpp
-        widget.cpp
-        widget.h
-        widget.ui
+        MainWindow.cpp
+        MainWindow.h
+        MainWindow.ui
 )
 
 if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
-    qt_add_executable(calculator
+    qt_add_executable(UnmannedTestingSystem
         MANUAL_FINALIZATION
         ${PROJECT_SOURCES}
+        UnitManageWindow.h UnitManageWindow.cpp UnitManageWindow.ui
+        UnitDialog.h UnitDialog.cpp UnitDialog.ui
     )
 # Define target properties for Android with Qt 6 as:
-#    set_property(TARGET calculator APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
+#    set_property(TARGET UnmannedTestingSystem APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
 #                 ${CMAKE_CURRENT_SOURCE_DIR}/android)
 # For more information, see https://doc.qt.io/qt-6/qt-add-executable.html#target-creation
 else()
     if(ANDROID)
-        add_library(calculator SHARED
+        add_library(UnmannedTestingSystem SHARED
             ${PROJECT_SOURCES}
         )
 # Define properties for Android with Qt 5 after find_package() calls as:
 #    set(ANDROID_PACKAGE_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/android")
     else()
-        add_executable(calculator
+        add_executable(UnmannedTestingSystem
             ${PROJECT_SOURCES}
         )
     endif()
 endif()
 
-target_link_libraries(calculator PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)
+target_link_libraries(UnmannedTestingSystem PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)
 
 # Qt for iOS sets MACOSX_BUNDLE_GUI_IDENTIFIER automatically since Qt 6.1.
 # If you are developing for iOS or macOS you should consider setting an
 # explicit, fixed bundle identifier manually though.
 if(${QT_VERSION} VERSION_LESS 6.1.0)
-  set(BUNDLE_ID_OPTION MACOSX_BUNDLE_GUI_IDENTIFIER com.example.calculator)
+  set(BUNDLE_ID_OPTION MACOSX_BUNDLE_GUI_IDENTIFIER com.example.UnmannedTestingSystem)
 endif()
-set_target_properties(calculator PROPERTIES
+set_target_properties(UnmannedTestingSystem PROPERTIES
     ${BUNDLE_ID_OPTION}
     MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
     MACOSX_BUNDLE_SHORT_VERSION_STRING ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
@@ -59,12 +61,12 @@ set_target_properties(calculator PROPERTIES
 )
 
 include(GNUInstallDirs)
-install(TARGETS calculator
+install(TARGETS UnmannedTestingSystem
     BUNDLE DESTINATION .
     LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
     RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
 )
 
 if(QT_VERSION_MAJOR EQUAL 6)
-    qt_finalize_executable(calculator)
+    qt_finalize_executable(UnmannedTestingSystem)
 endif()
